# metadef

./: .clang-format  .gitignore  CMakeLists.txt  OWNERS  build.sh  update_newest_packages.sh
error_manager/: CMakeLists.txt  error_code.json  error_manager.cc
error_manager/stub/: Makefile
exe_graph/: CMakeLists.txt
exe_graph/lowering/: bg_ir_attrs.cc  bg_kernel_context_extend.cc  buffer_pool.cc  dev_mem_value_holder.cc  frame_selector.cc  ir_definitions_recover.cc  lowering_global_data.cc  scoped_current_frame.h  tlv.cc  value_holder.cc  value_holder_generator.cc  value_holder_inner.h
exe_graph/runtime/: compute_node_info.cc  context_extend.cc  data_dependent_interpreter.cc  getcdim.cc  kernel_run_context_builder.cc  kernel_run_context_builder.h  op_execute_context.cc  runtime_attrs.cc  runtime_attrs_def.h  shape_utils.cc  tiling_context_builder.cc  tiling_data.cc  tiling_parse_context_builder.cc
exe_graph/stub/: Makefile
register/: CMakeLists.txt  auto_mapping_util.cpp  auto_mapping_util.h  ffts_node_converter_registry.cc  ffts_plus_update_manager.cc  hidden_input_func_registry.cc  infer_data_slice_registry.cc  kernel_register_data.cc  kernel_register_data.h  kernel_registry_impl.cc  node_converter_registry.cc  op_ext_gentask_registry.cc  op_impl_register_v2_impl.h  op_impl_registry.cc  op_impl_registry_holder_manager.cc  op_impl_space_registry.cc  op_kernel_registry.cpp  op_tiling.cpp  op_tiling_registry.cpp  op_tiling_registry_impl.cpp  op_tiling_registry_impl.h  ops_kernel_builder_registry.cc  prototype_pass_registry.cc  register.cpp  register_format_transfer.cc  register_pass.cpp  shape_inference.cc  tensor_assign.cpp  tuning_bank_key_registry.cc  tuning_tiling_registry.cc
register/ascendc/: op_check.cc  tilingdata_base.cc
register/graph_optimizer/buffer_fusion/: buffer_fusion_pass_base.cc  buffer_fusion_pass_registry.cc  buffer_fusion_pattern.cc
register/graph_optimizer/fusion_common/: accelerator.cc  accelerator_utils.cc  fusion_pass_desc.cc  fusion_turbo.cc  fusion_turbo_utils.cc
register/graph_optimizer/fusion_statistic/: fusion_statistic_recorder.cc
register/graph_optimizer/graph_fusion/: connection_matrix.cc  fusion_pass_registry.cc  fusion_pattern.cc  fusion_quant_util.cc  fusion_quant_util_impl.cc  fusion_quant_util_impl.h  graph_fusion_pass_base.cc  graph_pass_util.cc  large_bm.cc  pattern_fusion_base_pass.cc  pattern_fusion_base_pass_impl.cc  pattern_fusion_base_pass_impl.h
register/op_tiling/: op_compile_info_manager.cc  op_compile_info_manager.h  op_tiling.cc  op_tiling_attr_utils.cc  op_tiling_constants.h  op_tiling_info.cc  op_tiling_py.cc  op_tiling_registry.cc  op_tiling_utils.cc  op_tiling_utils.h
register/opdef/: op_def.cc  op_def_aicore.cc  op_def_attr.cc  op_def_factory.cc  op_def_impl.h  op_def_param.cc
register/scope/: scope_graph.cc  scope_pass.cc  scope_pass_registry.cc  scope_pattern.cc  scope_util.cc
register/stub/: Makefile
register/tik2/: op_check.cc  tik2_py.cc  tilingdata_base.cc
tests/benchmark/: CMakeLists.txt
tests/benchmark/fast_graph/: CMakeLists.txt  compute_graph_base_unittest.cc
tests/ut/exe_graph/: CMakeLists.txt  abi_compatibility_for_exe_graph_unittest.cc  bg_ir_attrs_unittest.cc  bg_kernel_context_extend_unittest.cc  buffer_pool_unittest.cc  checker_unittest.cc  compute_node_info_unittest.cc  continuous_vector_unittest.cc  data_dependent_interpreter_unittest.cc  dev_mem_value_holder_unittest.cc  expand_dims_type_unittest.cc  frame_selector_unittest.cc  generate_exe_graph_unittest.cc  gert_tensor_data_unittest.cc  hyper_status_unittest.cc  infer_datatype_context_unittest.cc  infer_shape_context_unittest.cc  infer_shape_range_context_unittest.cc  ir_definitions_recover_test.cc  kernel_context_unittest.cc  kernel_run_context_builder_unittest.cc  lowering_global_data_unittest.cc  op_execute_context_unittest.cc  shape_range_unittest.cc  shape_unittest.cc  shape_utils_unittest.cc  tensor_data_unittest.cc  tensor_unittest.cc  tiling_context_builder_unittest.cc  tiling_context_unittest.cc  tiling_data_unittest.cc  tiling_parse_context_builder_unittest.cc  tiling_parse_context_unittest.cc  value_holder_unittest.cc
tests/ut/graph/: CMakeLists.txt
tests/ut/graph/testcase/: aging_policy_lru_k_unittest.cc  aligned_ptr_unittest.cc  anchor_unittest.cc  anchor_utils_unittest.cc  any_value_ut.cc  args_format_desc_unittest.cc  attr_serializer_unittest.cc  attr_utils_unittest.cc  buffer_unittest.cc  compile_cache_policy_hasher_unittest.cc  compile_cache_policy_unittest.cc  compute_graph_unittest.cc  constant_utils_unittest.cc  cycle_detector_unittest.cc  data_flow_utils_unittest.cc  enum_attr_utils_unittest.cc  execute_graph_unittest.cc  fast_graph_impl_unittest.cc  fast_node_unittest.cc  fast_node_utils_unittest.cc  ffts_graph_utils_unittest.cc  file_utils_unittest.cc  flow_attr_util_unitest.cc  flow_graph_unitest.cc  flow_graph_unittest.cc  ge_attr_value_unittest.cc  ge_context_unittest.cc  ge_ir_utils_unittest.cc  ge_local_context_unittest.cc  ge_tensor_unittest.cc  gnode_unittest.cc  graph_builder_utils.cc  graph_builder_utils.h  graph_debug_unittest.cc  graph_unittest.cc  graph_utils_unittest.cc  hcom_topo_info_unittest.cc  infer_datatype_unittest.cc  inference_context_unittest.cc  ir_definitions_recover_test.cc  (+36 more)
tests/ut/register/: CMakeLists.txt
tests/ut/register/testcase/: abi_compatibility_for_register_unittest.cc  auto_mapping_util_unittest.cc  ffts_node_registry_unittest.cc  fusion_statistics.cc  graph_fusion_accelerator_unittest.cc  graph_fusion_accelerator_unittest2.cc  graph_fusion_clycle_detection_unittest.cc  graph_fusion_turbo_unittest.cc  graph_fusion_turbo_unittest2.cc  graph_pass_util_ut.cc  hidden_input_registry_unittest.cc  kernel_registry_impl_unittest.cc  kernel_registry_unittest.cc  node_converter_registry_unittest.cc  op_check_unittest.cc  op_def_aicore_unittest.cc  op_def_api_unittest.cc  op_def_attr_unittest.cc  op_def_factory_unittest.cc  op_def_param_unittest.cc  op_def_unittest.cc  op_impl_registry_holder_manager_unittest.cc  op_impl_registry_unittest.cc  op_registry_unittest.cc  (+27 more)
(+410 files in other folders)
